--- a/css/index.css
+++ b/css/index.css
@@ -12,46 +12,25 @@ body {
 
 .text {
     font-family: Helvetica, Arial, sans-serif;
+    color: #f2f2f2;
     font-size: 28px;
     font-weight: normal;
     line-height: 32px;
-    width: 500px;
-}
-
-input[type=text], input[type=password] {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    width: 100%;
-    background: rgb(106, 9, 121);
-    background: linear-gradient(90deg, rgba(106, 9, 121, 1) 0%, rgba(92, 9, 121, 0.923406862745098) 0%, rgba(0, 212, 255, 1) 100%);
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 input[type=submit]:hover {
     background-color: #45a049;
 }
 
-form {
+.rightContent {
     float: right;
-    width: 35%;
+    width: 40%;
     border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
     margin-right: 12.5%;
-    margin-top: 12.5%;
+    margin-top: 5%;
+    text-align: center;
 }
 
 .sphere {
