--- a/css/home.css
+++ b/css/home.css
@@ -19,12 +19,59 @@ body {
     width: 100%;
 }
 
-.rightContent {
-    float: right;
-    width: 40%;
+.content{
+    width: 45%;
+    height: 650px;
+    margin: auto;
     border-radius: 5px;
     padding: 20px;
-    margin-right: 12.5%;
-    margin-top: 5%;
     text-align: center;
+}
+
+input[type=text] {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 20%;
+    background: rgb(106, 9, 121);
+    background: linear-gradient(90deg, rgba(106, 9, 121, 1) 0%, rgba(92, 9, 121, 0.923406862745098) 0%, rgba(0, 212, 255, 1) 100%);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0 8px auto;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.post {
+    display: flex;
+}
+
+.feed {
+    width: 100%;
+    height: 100%;
+    margin: 12px 0;
+    border-radius: 5px;
+    padding: 20px;
+    text-align: center;
+    background-color: white;
+    word-wrap: break-word;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.feed::-webkit-scrollbar {
+    display: none;
 }
